Quick fix to make things usable on mobile

--- a/src/scss/_generate-npc-button.scss
+++ b/src/scss/_generate-npc-button.scss
@@ -23,3 +23,12 @@
 		color: darkgray;
 	}
 }
+
+@media (max-width: 760px) {
+	.generate-npc-button {
+		position: fixed;
+		bottom: 0;
+		left: 0;
+		width: 100%;
+	}
+}
