--- a/src/scss/_npc-card.scss
+++ b/src/scss/_npc-card.scss
@@ -110,3 +110,33 @@
 		}
 	}
 }
+
+@media (max-width: 760px) {
+	.npc-card {
+		margin-bottom: 5rem;
+
+		&__header {
+			flex-direction: column;
+		}
+
+		&__sturdiness {
+			order: 1;
+		}
+
+		&__image {
+			width: 100%;
+		}
+
+		&__bio {
+			width: 100%;
+		}
+
+		&__ability-scores {
+			flex-wrap: wrap;
+
+			li {
+				flex: 1 1 calc(100% / 3);
+			}
+		}
+	}
+}
